# blok-rs

./: .gitignore  Cargo.toml  README.md  changes.patch  elo.py  test_client.html  view_pack.html
nn/: quantised.txt
src/: board.rs  lib.rs  main.rs
src/mcts/: MonteCarlo.rs  MonteCarloNode.rs  mod.rs  monte_carlo.rs  monte_carlo_node.rs
src/minimax/: mod.rs  searcher.rs  transposition_table.rs
src/movegen/: mod.rs  movegen.rs  piece-corner-attachers.json  piece-corners.json  piece-orientations-bitboard-halo.json  piece-orientations-bitboard.json  piece-orientations.json  piece-rr.json  piece-short-bounding-box.json  pieces.json  zobrist.rs
src/nn/: mod.rs
tests/: movegen_validity.rs  tree_validity.rs
tests/testdata/: game_movedata.json
