[package]
name = "blok-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
once_cell = "1.21.3"
rand = "0.9.2"
serde = {version="1.0.219", features = ["derive"]}
serde_json = "1.0.143"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"